err/absinthe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Absinthe-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/absinthe'...
Listing './lib/python3.5/site-packages/absinthe/tools'...
Compiling './lib/python3.5/site-packages/absinthe/tools/background_process_handler.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/background_process_handler.py", line 69
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/absinthe/tools/daemon.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/daemon.py", line 34
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/absinthe/tools/linux'...
Compiling './lib/python3.5/site-packages/absinthe/tools/utils.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/utils.py", line 112
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/absinthe/tools/win'...
Compiling './lib/python3.5/site-packages/absinthe/tools/win/service.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/win/service.py", line 50
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/absinthe/tools/win/window_manager.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/win/window_manager.py", line 30
    if threading.currentThread().getName() <> 'MainThread':
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bunch'...
Listing './lib/python3.5/site-packages/bunch-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Compiling './lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py'...
***   File "./lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py", line 175
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjsonrpc'...
Compiling './lib/python3.5/site-packages/pyjsonrpc/http.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/http.py", line 123
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyjsonrpc/rpclib.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/rpclib.py", line 119
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_jsonrpc-0.7.12.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
